--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
   "name": "cse341",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "express": "^4.21.0"
-  }
+  "description": ""
 }
